# merrimack

./: Cargo.toml  README.md  test.py
merrimack-client/: Cargo.toml
merrimack-common/: Cargo.toml
merrimack-common/src/: lib.rs
merrimack-server/: Cargo.toml
merrimack-server/src/: main.rs
src/: main.rs
