[package]
name = "merrimack-server"
version = "0.1.0"
edition = "2024"

[dependencies]
merrimack-common = { path = "../merrimack-common" }
nix = { version = "0.30.1", features = ["poll", "signal", "socket", "time"] }
notify-rust = "4.11.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
